classif grp_1_nb

--- a/notebooks/3_In_situ_data/in_situ_data.ipynb
+++ b/notebooks/3_In_situ_data/in_situ_data.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,12 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "crop_file     = f'{data_path}{site}_{year}_CROPLAND.shp'\n",
     "non_crop_file = f'{data_path}{site}_{year}_NON_CROPLAND.shp'\n",
+    "\n",
+    "in_situ_file = f'{in_situ_path}{site}_{year}_IN_SITU_ROI.shp'\n",
+    "\n",
     "\n",
     "sigec_lut_xlsx = f'{lut_path}SIGEC_Sen4Stat_LUT.xlsx'\n",
     "s4s_lut_xlsx   = f'{lut_path}crop_dictionary_new.xlsx'"
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1108,14 +1111,18 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>sub_nb</th>\n",
-       "      <th>sub</th>\n",
+       "      <th>lc_nb</th>\n",
+       "      <th>lc</th>\n",
        "      <th>grp_nb</th>\n",
        "      <th>grp</th>\n",
        "      <th>class_nb</th>\n",
        "      <th>class</th>\n",
-       "      <th>lc_nb</th>\n",
-       "      <th>lc</th>\n",
+       "      <th>sub_nb</th>\n",
+       "      <th>sub</th>\n",
+       "      <th>grp_1_nb</th>\n",
+       "      <th>grp_1</th>\n",
+       "      <th>grp_A_nb</th>\n",
+       "      <th>grp_A</th>\n",
        "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1123,11 +1130,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>3199</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>319</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3199</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
@@ -1136,11 +1147,15 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>3199</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>319</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3199</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
@@ -1149,11 +1164,15 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>3199</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>319</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3199</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
@@ -1162,11 +1181,15 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>3199</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>319</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3199</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
@@ -1175,11 +1198,15 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>3199</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>31</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>319</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3199</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
        "      <td>3</td>\n",
        "      <td>Grassland and meadows</td>\n",
@@ -1190,19 +1217,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   id  sub_nb                    sub  grp_nb                    grp  class_nb  \\\n",
-       "0   0    3199  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "1   1    3199  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "2   2    3199  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "3   3    3199  Grassland and meadows      31  Grassland and meadows       319   \n",
-       "4   4    3199  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "   id  lc_nb                     lc  grp_nb                    grp  class_nb  \\\n",
+       "0   0      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "1   1      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "2   2      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "3   3      3  Grassland and meadows      31  Grassland and meadows       319   \n",
+       "4   4      3  Grassland and meadows      31  Grassland and meadows       319   \n",
        "\n",
-       "                   class  lc_nb                     lc  \\\n",
-       "0  Grassland and meadows      3  Grassland and meadows   \n",
-       "1  Grassland and meadows      3  Grassland and meadows   \n",
-       "2  Grassland and meadows      3  Grassland and meadows   \n",
-       "3  Grassland and meadows      3  Grassland and meadows   \n",
-       "4  Grassland and meadows      3  Grassland and meadows   \n",
+       "                   class  sub_nb                    sub  grp_1_nb  \\\n",
+       "0  Grassland and meadows    3199  Grassland and meadows         3   \n",
+       "1  Grassland and meadows    3199  Grassland and meadows         3   \n",
+       "2  Grassland and meadows    3199  Grassland and meadows         3   \n",
+       "3  Grassland and meadows    3199  Grassland and meadows         3   \n",
+       "4  Grassland and meadows    3199  Grassland and meadows         3   \n",
+       "\n",
+       "                   grp_1  grp_A_nb                  grp_A  \\\n",
+       "0  Grassland and meadows         3  Grassland and meadows   \n",
+       "1  Grassland and meadows         3  Grassland and meadows   \n",
+       "2  Grassland and meadows         3  Grassland and meadows   \n",
+       "3  Grassland and meadows         3  Grassland and meadows   \n",
+       "4  Grassland and meadows         3  Grassland and meadows   \n",
        "\n",
        "                                            geometry  \n",
        "0  POLYGON ((636106.223 5595512.196, 636122.069 5...  \n",
@@ -1219,9 +1253,9 @@
    "source": [
     "lut_in_situ_gdf = in_situ_gdf.merge(s4s_lut_df, on='sub_nb')\n",
     "\n",
-    "lut_in_situ_gdf = lut_in_situ_gdf[['id','sub_nb','sub','grp_nb','grp','class_nb','class','lc_nb','lc','geometry']]\n",
+    "lut_in_situ_gdf = lut_in_situ_gdf[['id','lc_nb','lc','grp_nb','grp','class_nb','class','sub_nb','sub','grp_1_nb','grp_1','grp_A_nb','grp_A','geometry']]\n",
     "\n",
-    "display(lut_in_situ_gdf.head())\n"
+    "display(lut_in_situ_gdf.head())"
    ]
   },
   {
@@ -1454,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1466,8 +1500,6 @@
     }
    ],
    "source": [
-    "in_situ_file = f'{in_situ_path}NAMUR_2020_IN_SITU_ROI.shp'\n",
-    "\n",
     "lut_in_situ_gdf.to_file(in_situ_file)\n",
     "\n",
     "print(f'New shapefile has been created : {in_situ_file}')"
