--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,6 @@
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "#from sklearn.datasets import make_classification\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, plot_confusion_matrix\n",
     "\n",
     "from pathlib import Path\n",
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +72,8 @@
     "\n",
     "in_situ_path = f'{work_path}IN_SITU/'\n",
     "\n",
-    "im_path   = f'{work_path}3_L2A_MASKED/'\n",
+    "s2_path   = f'{work_path}3_L2A_MASKED/'\n",
+    "s1_path   = f'{work_path}S1_GRD/'\n",
     "ndvi_path = f'{work_path}NDVI/'\n",
     "\n",
     "\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,14 @@
     "field_classif_name = 'grp_1'\n",
     "\n",
     "field_reclassif_code = 'grp_A_nb'\n",
-    "field_reclassif_name = 'grp_A'"
+    "field_reclassif_name = 'grp_A'\n",
+    "\n",
+    "feat_nb = 1\n",
+    "\n",
+    "if feat_nb == 1:\n",
+    "    feat_name = ['NDVI']\n",
+    "elif feat_nb == 2:\n",
+    "    feat_name = ['NDVI','S1_monthly_mean']"
    ]
   },
   {
@@ -119,18 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "in_situ_cal_shp = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.shp'\n",
     "in_situ_cal_tif = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.tif'\n",
     "\n",
-    "classif_tif   = f'{classif_path}{site}_{year}_CLASSIF_RF_with_NDVI.tif'\n",
-    "reclassif_tif = f'{classif_path}{site}_{year}_CLASSIF_RF_with_NDVI_{field_reclassif_name}.tif'\n",
+    "s1_montlhy_mean_tif = f'{s1_path}monthly_mean_{site}_{year}.tif'\n",
+    "\n",
+    "classif_tif   = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}.tif'\n",
+    "reclassif_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_reclassif_name}.tif'\n",
     "\n",
     "\n",
-    "s4s_lut_xlsx   = f'{lut_path}crop_dictionary_new.xlsx'\n"
+    "s4s_lut_xlsx   = f'{lut_path}crop_dictionary_new.xlsx'"
    ]
   },
   {
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -168,7 +177,7 @@
     }
    ],
    "source": [
-    "img_temp_tif = glob.glob(f'{im_path}*.tif')[0]\n",
+    "img_temp_tif = glob.glob(f'{s2_path}*.tif')[0]\n",
     "\n",
     "print(f'Raster template file : {img_temp_tif}')\n",
     "\n",
@@ -230,14 +239,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 List all the classification features\n",
-    "\n",
-    "In this case, one NDVI per month"
+    "### 1.2 List all the classification features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create an empty list to append all feature rasters one by one\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_src_arr = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One NDVI per month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'NDVI' in feat_name:\n",
+    "\n",
+    "    list_im = sorted(glob.glob(f'{ndvi_path}*.tif'))\n",
+    "\n",
+    "    for im_file in list_im:\n",
+    "\n",
+    "        src = rasterio.open(im_file, \"r\")\n",
+    "        im = src.read(1)\n",
+    "        list_src_arr.append(im)\n",
+    "        src.close()\n",
+    "\n",
+    "    print(len(list_src_arr))\n",
+    "\n",
+    "else:\n",
+    "    print(\"No NDVI in the set of features\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "S1 monthly mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No S1 monthly mean in the set of features\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'S1_monthly_mean' in feat_name:\n",
+    "\n",
+    "    src = rasterio.open(s1_montlhy_mean_tif, \"r\")\n",
+    "    im = src.read()\n",
+    "    src.close()\n",
+    "\n",
+    "    for i in range(len(im)):\n",
+    "        band = im[i]\n",
+    "        list_src_arr.append(band)\n",
+    "\n",
+    "    print(len(list_src_arr))\n",
+    "\n",
+    "else:\n",
+    "    print(\"No S1 monthly mean in the set of features\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge all the 2D matrices from the list into one 3D matrix\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -251,21 +356,6 @@
     }
    ],
    "source": [
-    "# Get list of all files containing the features\n",
-    "list_im = sorted(glob.glob(f'{ndvi_path}*.tif'))\n",
-    "\n",
-    "# Create an empty list to append all feature rasters one by one\n",
-    "list_src_arr = []\n",
-    "\n",
-    "for im_file in list_im:\n",
-    "\n",
-    "    src = rasterio.open(im_file, \"r\")\n",
-    "    im = src.read(1)\n",
-    "    list_src_arr.append(im)\n",
-    "    src.close()\n",
-    "\n",
-    "# Merge all the 2D matrices from the list into one 3D matrix\n",
-    "\n",
     "feat_arr = np.dstack(list_src_arr).astype(np.float32)\n",
     "\n",
     "print(feat_arr.shape)\n",
@@ -287,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -392,14 +482,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest training : 00:00:10.39\n"
+      "Random Forest training : 00:00:10.48\n"
      ]
     }
    ],
@@ -417,7 +507,7 @@
     "# Get time elapsed during the Random Forest training\n",
     "hours, rem = divmod(end_training-start_training, 3600)\n",
     "minutes, seconds = divmod(rem, 60)\n",
-    "print(\"Random Forest training : {:0>2}:{:0>2}:{:05.2f}\".format(int(hours),int(minutes),seconds))\n"
+    "print(\"Random Forest training : {:0>2}:{:0>2}:{:05.2f}\".format(int(hours),int(minutes),seconds))"
    ]
   },
   {
@@ -429,14 +519,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our OOB prediction of accuracy is: 99.28%\n"
+      "Our OOB prediction of accuracy is: 99.29%\n"
      ]
     }
    ],
@@ -453,25 +543,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Band 1 importance: 0.0782\n",
-      "Band 2 importance: 0.0263\n",
-      "Band 3 importance: 0.0887\n",
-      "Band 4 importance: 0.0889\n",
-      "Band 5 importance: 0.1215\n",
-      "Band 6 importance: 0.0481\n",
-      "Band 7 importance: 0.127\n",
-      "Band 8 importance: 0.1216\n",
-      "Band 9 importance: 0.1051\n",
-      "Band 10 importance: 0.0734\n",
-      "Band 11 importance: 0.0636\n",
-      "Band 12 importance: 0.0576\n"
+      "Band 1 importance: 0.0706\n",
+      "Band 2 importance: 0.0258\n",
+      "Band 3 importance: 0.1083\n",
+      "Band 4 importance: 0.0864\n",
+      "Band 5 importance: 0.1193\n",
+      "Band 6 importance: 0.0505\n",
+      "Band 7 importance: 0.1249\n",
+      "Band 8 importance: 0.1225\n",
+      "Band 9 importance: 0.1011\n",
+      "Band 10 importance: 0.0771\n",
+      "Band 11 importance: 0.0611\n",
+      "Band 12 importance: 0.0521\n"
      ]
     }
    ],
@@ -489,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1107,9 +1197,9 @@
      "output_type": "stream",
      "text": [
       "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:00:12.32\n",
-      "[[   3    3   81 ...    3    3    3]\n",
-      " [   3   21    3 ...    3    3   22]\n",
+      "Random Forest training : 00:00:12.18\n",
+      "[[   3    3    3 ...    3    3    3]\n",
+      " [   3    3    3 ...    3    3   22]\n",
       " [   3    3   21 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
@@ -1157,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1301,22 +1391,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[   3    3   81 ...    3    3    3]\n",
-      " [   3   21    3 ...    3    3   22]\n",
+      "[[   3    3    3 ...    3    3    3]\n",
+      " [   3    3    3 ...    3    3   22]\n",
       " [   3    3   21 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  81   81   81 ...   81   81   81]]\n",
-      "[[  3   3   8 ...   3   3   3]\n",
-      " [  3  21   3 ...   3   3  22]\n",
+      "[[  3   3   3 ...   3   3   3]\n",
+      " [  3   3   3 ...   3   3  22]\n",
       " [  3   3  21 ...   3  22 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
@@ -1358,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
