remove nan line

--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {
     "tags": []
    },
@@ -167,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raster template file : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200417T104021_B11_10m_ROI_SCL.tif\n",
+      "Raster template file : /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20201118T104329_B04_10m_ROI_SCL.tif\n",
       "The CRS of in situ data is    : 32631\n",
       "The CRS of raster template is : 32631\n",
       "CRS are the same\n",
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,14 +267,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "Shape of features : (570, 986)\n",
+      "Number of features : 24\n"
      ]
     }
    ],
@@ -290,7 +291,8 @@
     "        list_src_arr.append(im)\n",
     "        src.close()\n",
     "\n",
-    "    print(len(list_src_arr))\n",
+    "    print(f'Shape of features : {im.shape}')\n",
+    "    print(f'Number of features : {len(list_src_arr)}')\n",
     "\n",
     "else:\n",
     "    print(\"No NDVI in the set of features\")"
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +329,8 @@
     "        band = im[i]\n",
     "        list_src_arr.append(band)\n",
     "\n",
-    "    print(len(list_src_arr))\n",
+    "    print(f'Shape of features : {band.shape}')\n",
+    "    print(f'Number of features : {len(list_src_arr)}')\n",
     "\n",
     "else:\n",
     "    print(\"No S1 monthly mean in the set of features\")"
@@ -342,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -482,14 +485,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest training : 00:00:10.48\n"
+      "Random Forest training : 00:00:10.47\n"
      ]
     }
    ],
@@ -519,14 +522,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our OOB prediction of accuracy is: 99.29%\n"
+      "Our OOB prediction of accuracy is: 99.24%\n"
      ]
     }
    ],
@@ -543,25 +546,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Band 1 importance: 0.0706\n",
-      "Band 2 importance: 0.0258\n",
-      "Band 3 importance: 0.1083\n",
-      "Band 4 importance: 0.0864\n",
-      "Band 5 importance: 0.1193\n",
-      "Band 6 importance: 0.0505\n",
-      "Band 7 importance: 0.1249\n",
-      "Band 8 importance: 0.1225\n",
-      "Band 9 importance: 0.1011\n",
-      "Band 10 importance: 0.0771\n",
-      "Band 11 importance: 0.0611\n",
-      "Band 12 importance: 0.0521\n"
+      "Band 1 importance: 0.0803\n",
+      "Band 2 importance: 0.025\n",
+      "Band 3 importance: 0.1008\n",
+      "Band 4 importance: 0.0873\n",
+      "Band 5 importance: 0.1235\n",
+      "Band 6 importance: 0.0477\n",
+      "Band 7 importance: 0.1305\n",
+      "Band 8 importance: 0.1192\n",
+      "Band 9 importance: 0.0925\n",
+      "Band 10 importance: 0.0678\n",
+      "Band 11 importance: 0.0672\n",
+      "Band 12 importance: 0.0581\n"
      ]
     }
    ],
@@ -579,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1197,14 +1200,14 @@
      "output_type": "stream",
      "text": [
       "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:00:12.18\n",
-      "[[   3    3    3 ...    3    3    3]\n",
+      "Random Forest training : 00:00:12.29\n",
+      "[[   3    3   81 ...    3    3    3]\n",
       " [   3    3    3 ...    3    3   22]\n",
-      " [   3    3   21 ...    3   22 1121]\n",
+      " [   3    3    3 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
-      " [  81   81   81 ...   81   81   81]]\n"
+      " [  69   69   69 ... 1111 1111 1111]]\n"
      ]
     }
    ],
@@ -1247,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1391,27 +1394,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[   3    3    3 ...    3    3    3]\n",
+      "[[   3    3   81 ...    3    3    3]\n",
       " [   3    3    3 ...    3    3   22]\n",
-      " [   3    3   21 ...    3   22 1121]\n",
+      " [   3    3    3 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
-      " [  81   81   81 ...   81   81   81]]\n",
-      "[[  3   3   3 ...   3   3   3]\n",
+      " [  69   69   69 ... 1111 1111 1111]]\n",
+      "[[  3   3   8 ...   3   3   3]\n",
       " [  3   3   3 ...   3   3  22]\n",
-      " [  3   3  21 ...   3  22 112]\n",
+      " [  3   3   3 ...   3  22 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
       " [  6   6   6 ... 111 111 111]\n",
-      " [  8   8   8 ...   8   8   8]]\n"
+      " [  6   6   6 ... 111 111 111]]\n"
      ]
     }
    ],
@@ -1448,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
